added folders and ef connection

--- a/ServiceLayer/ServiceLayer.csproj
+++ b/ServiceLayer/ServiceLayer.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Configurations\" />
-    <Folder Include="Entities\" />
+    <Folder Include="Contacts\" />
     <Folder Include="DTOs\" />
-    <Folder Include="Repositories\" />
+    <Folder Include="Implementations\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
