--- a/TaskManagementSystem/appsettings.json
+++ b/TaskManagementSystem/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TaskContext": "Server=localhost;Database=TaskManagementSystem_DB;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
+  }
