Bug Fixed in Folders Name

--- a/TaskManagementSystem.Api/TaskManagementSystem.Api.csproj
+++ b/TaskManagementSystem.Api/TaskManagementSystem.Api.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ServiceLayer\TaskManagementSystem.Service.csproj" />
+    <ProjectReference Include="..\TaskManagementSystem.Service\TaskManagementSystem.Service.csproj" />
   </ItemGroup>
 
 </Project>
