--- a/TaskManagementSystem.Service/TaskManagementSystem.Service.csproj
+++ b/TaskManagementSystem.Service/TaskManagementSystem.Service.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contacts\" />
     <Folder Include="DTOs\" />
-    <Folder Include="Implementations\" />
     <Folder Include="Extensions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
 	<ItemGroup>
